feat(mobile): add first mobile implementation

--- a/src/app/pages/bets/calculator/calculator.component.html
+++ b/src/app/pages/bets/calculator/calculator.component.html
@@ -33,7 +33,7 @@
       </div>
       
       <div class="stake-box">
-        <div class="floating-odds" style="left: 20px;">
+        <div class="floating-odds floating-odds-left" style="left: 20px;">
           <span class="odds-value">{{ data.bookmaker_1.koef }}</span>
         </div>
         <div class="stake-header">
