--- a/src/app/layout/footer/footer.component.scss
+++ b/src/app/layout/footer/footer.component.scss
@@ -14,6 +14,7 @@
 
   .name {
     letter-spacing: 0;
+    font-size: clamp(0.75rem, 2vw, 1rem);
 
     .brand-name {
       font-family: 'Offenbacher', sans-serif;
